# Jemalloc

./: .gitignore  CMakeLists.txt  jemalloc.c  jemalloc.c.patch  jemalloc.h
tests/: calloc.c  jemalloc.h  malloc.c  realloc.c
